HikVision provider bug fix for recorders
